--- a/README
+++ b/README
@@ -68,10 +68,12 @@ instructions; also have a look at the example files.
 
 == CHANGES ==
 
-* V. 1.8 (forthcoming):  - Add extradate option to \NewSession to allow for fix dates.
-                         - Add possibility to enter and retrieve (separate) exam dates
-                           (option exam of \NewSession, \makeexamprogram and
-                           \makebeamerexamprogram), and by the means of \examsesno.
+* V. 1.8 (forthcoming):  - Add extradate option to \NewSession to support fix dates.
+                         - Add possibility to enter exam dates that are not added to
+                           the standard program (option exam of \NewSession).
+		           Also add macros to display them separately (\makeexamprogram,
+		           \makebeamerexamprogram) and to access their session number
+                           (\examsesno).
                          - Switch input format of \LecStartDate to ISO (YYYY-MM-DD).
                            The old format (DD/MM/YYYY) is still supported for backwards
                            compatibility.
