Support for lecture and session start time

--- a/README
+++ b/README
@@ -81,6 +81,7 @@ instructions; also have a look at the example files.
                            \SessionBlockNumber{<session no>} and \AdjSessionBlockNumber).
                          - Add unstyled date formats which allow preceding \DTMsetdatestyle
                            (the short and long date formats would override such settings).
+                         - Add support for lecture and session start time.
 
 * V. 1.7 (2018-12-14):   - Allow options in \makebeamerprogram also with blocksonly.
                          - Add overlayarg option to \makebeamerprogram.
